--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,29 @@
     <title>timeline</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/favicon/apple-touch-icon.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/favicon/favicon-32x32.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assetes/favicon/favicon-16x16.png" />
+    <link rel="manifest" href="/assets/faviconsite.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="/assets/favicon/safari-pinned-tab.svg"
+      color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#ebdbb2" />
+    <meta name="theme-color" content="#ebdbb2" />
+
     <script src="https://accounts.google.com/gsi/client" async></script>
   </head>
 
