fix: fix padding for user dashboard

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
       type="image/png"
       sizes="16x16"
       href="/assetes/favicon/favicon-16x16.png" />
-    <link rel="manifest" href="/assets/faviconsite.webmanifest" />
+    <link rel="manifest" href="/assets/favicon/site.webmanifest" />
     <link
       rel="mask-icon"
       href="/assets/favicon/safari-pinned-tab.svg"
