--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="scroll-smooth">
+<html lang="en" class="scroll-smooth" data-theme="gruvbox" id="html">
   <head>
     <meta charset="utf-8" />
     <title>timeline</title>
