fix: fix some mobile design issues

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
     <title>timeline</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="create a dynamic story of your life by adding milestones, memories, and achievements." />
 
     <link
       rel="apple-touch-icon"
