--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,12 @@
     <meta name="theme-color" content="#ebdbb2" />
   </head>
 
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inder&family=Lexend:wght@100..900&display=swap"
+    rel="stylesheet" />
+
   <body>
     <app-root></app-root>
   </body>
