--- a/src/index.html
+++ b/src/index.html
@@ -35,9 +35,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
-    href="https://fonts.googleapis.com/css2?family=Inder&family=Lexend:wght@100..900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Lexend&family=Roboto&family=Roboto+Mono&family=Vazirmatn&display=swap"
     rel="stylesheet" />
-
   <body>
     <app-root></app-root>
   </body>
