fix: fix width of app

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Lexend&family=Roboto&family=Roboto+Mono&family=Vazirmatn&display=swap"
     rel="stylesheet" />
-  <body>
+  <body class="mx-auto max-w-7xl">
     <app-root></app-root>
   </body>
 </html>
