fix: fix design

--- a/src/index.html
+++ b/src/index.html
@@ -35,8 +35,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
-    href="https://fonts.googleapis.com/css2?family=Lexend&family=Roboto&family=Roboto+Mono&family=Vazirmatn&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Roboto+Mono:wght@100..700&display=swap"
     rel="stylesheet" />
+
   <body class="mx-auto max-w-7xl">
     <app-root></app-root>
   </body>
