--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
-    href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Roboto+Mono:wght@100..700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,100..900&family=JetBrains+Mono&family=Roboto+Slab:wght@100..900&display=swap"
     rel="stylesheet" />
 
   <body class="mx-auto max-w-7xl">
