--- a/src/index.html
+++ b/src/index.html
@@ -10,26 +10,21 @@
       content="create a dynamic story of your life by adding milestones, memories, and achievements." />
 
     <link
+      rel="icon"
+      type="image/png"
+      href="/assets/favicon/favicon-96x96.png"
+      sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="/assets/favicon/favicon.ico" />
+    <link
       rel="apple-touch-icon"
       sizes="180x180"
       href="/assets/favicon/apple-touch-icon.png" />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="/assets/favicon/favicon-32x32.png" />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="/assets/favicon/favicon-16x16.png" />
+    <meta name="apple-mobile-web-app-title" content="timeline" />
     <link rel="manifest" href="/assets/favicon/site.webmanifest" />
-    <link
-      rel="mask-icon"
-      href="/assets/favicon/safari-pinned-tab.svg"
-      color="#5bbad5" />
-    <meta name="msapplication-TileColor" content="#ebdbb2" />
-    <meta name="theme-color" content="#ebdbb2" />
+
+    <meta name="msapplication-TileColor" content="#d65d0e" />
+    <meta name="theme-color" content="#d65d0e" />
   </head>
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
